tests/ui/no_default_implementation.rs
#[impl_trait_for_tuple::impl_for_tuples(1)]
trait Test {
	fn test() { println!("Hello"); }
}

fn main() {}
